Remove unused FontAwesome import and add noopener to external _blank links

--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@ sitemap:
         <h2>404 Page Not Found</h2><hr />
         <p>
             This is kinda embarassing, it looks like you somehow found your way to a page that doesn't exist. <br />
-            If this was my fault please <a href="https://github.com/CorruptComputer/CorruptComputer.GitHub.io/issues" target="_blank">let me know on GitHub</a> so I can get this fixed.<br />
+            If this was my fault please <a href="https://github.com/CorruptComputer/CorruptComputer.GitHub.io/issues" target="_blank" rel="noopener">let me know on GitHub</a> so I can get this fixed.<br />
             Anyways, heres a picture of a Sloth with an Eagles head:
         </p>
         <div style="display: flex; justify-content: space-around;">
