--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ sitemap:
     <div class="box">
         <h2>Currently</h2><hr />
         <div>
-            <h4><a href="https://www.capgemini.com/" target="_blank">Associate Consultant: Software Engineering - Capgemini</a></h4>
+            <h4><a href="https://www.capgemini.com/" target="_blank" rel="noopener">Associate Consultant: Software Engineering - Capgemini</a></h4>
             <p>February 2020 - Present</p>
             <p>
                 I am a software engineer working at Capgemini in their Financial Services division.
@@ -112,7 +112,7 @@ sitemap:
     <div class="box">
         <h2>Previously</h2><hr />
         <div>
-            <h4><a href="https://www.angelo.edu/services/technology/" target="_blank">Server Technician - Angelo State University</a></h4>
+            <h4><a href="https://www.angelo.edu/services/technology/" target="_blank" rel="noopener">Server Technician - Angelo State University</a></h4>
             <p>April 2018 - December 2019</p>
             <p>I was part of a team which managed their data center and virtual servers, along with Active Directory and Group Policy for the campus.</p>
             <p>Used: Active Directory, Bash, Group Policy Management, Linux Server Management, PowerShell, SQL, SCCM, SolarWinds, VMware vCenter, Windows Server Management</p>
@@ -134,13 +134,13 @@ sitemap:
     <div class="box">
         <h2>Maintaining</h2><hr />
         <div>
-            <h4><a href="https://github.com/CorruptComputer/CorruptComputer.GitHub.io" target="_blank">My Website</a>:</h4>
+            <h4><a href="https://github.com/CorruptComputer/CorruptComputer.GitHub.io" target="_blank" rel="noopener">My Website</a>:</h4>
             <p>
                 The site you're currently looking at. 
                 I am not a designer, but I hope it still looks alright!
                 <br />Used: CSS, Git, HTML, JavaScript, Jekyll, Ruby
             </p>
-            <h4><a href="https://github.com/CorruptComputer/ProtonDB-Tags" target="_blank">ProtonDB Tags</a>:</h4>
+            <h4><a href="https://github.com/CorruptComputer/ProtonDB-Tags" target="_blank" rel="noopener">ProtonDB Tags</a>:</h4>
             <p>
                 This script takes ProtonDB ratings and imports them into your Steam library as tags.
                 <br />Used: Git, Python, Web API's
@@ -150,17 +150,17 @@ sitemap:
     <div class="box">
         <h2>End of Life</h2><hr />
         <div>
-            <h4><a href="https://github.com/CorruptComputer/Officer-Beepsky" target="_blank">Officer-Beepsky</a>:</h4>
+            <h4><a href="https://github.com/CorruptComputer/Officer-Beepsky" target="_blank" rel="noopener">Officer-Beepsky</a>:</h4>
             <p>
                 Officer-Beepsky is an open source Discord bot. 
                 I made it for some friends and me to use in order to play music and manage our server. 
                 It is built with Discord4J as its main API to use to connect to Discord.
                 <br />Used: Bash, Git, Gradle, Java, PowerShell
             </p>
-            <h4><a href="https://github.com/CorruptComputer/ASU-Team-Juice-Compiler" target="_blank">Team Juice Compiler</a>:</h4>
+            <h4><a href="https://github.com/CorruptComputer/ASU-Team-Juice-Compiler" target="_blank" rel="noopener">Team Juice Compiler</a>:</h4>
             <p>
                 This is the compiler that was was written by my group (Team Juice) in my senior level Compilers class.
-                This was a collaborative effort by <a href="https://github.com/texaszn" target="_blank">Zachary N.</a> and myself, 
+                This was a collaborative effort by <a href="https://github.com/texaszn" target="_blank" rel="noopener">Zachary N.</a> and myself, 
                 it takes Pascallite code and generates RAMM Assembly code as the result. This was written in three stages over the course of 3 months, 
                 however only our final code result is available in the repository (along with some easter eggs in the code). 
                 I plan on rewriting this in other languages as I learn them.
@@ -174,16 +174,16 @@ sitemap:
 <div class="row">
     <div class="box">
         <h2>Professionally</h2><hr />
-        <h4>Primary Email: <a href="mailto:nickolas@gupton.xyz" target="_blank">nickolas@gupton.xyz</a></h4>
-        <h4>Secondary Email: <a href="mailto:nickolas.gupton@protonmail.com" target="_blank">nickolas.gupton@protonmail.com</a></h4>
-        <h4>LinkedIn: <a href="https://www.linkedin.com/in/nickolasgupton/" target="_blank">Nickolas Gupton</a></h4>
-        <h4>GitHub: <a href="https://github.com/CorruptComputer" target="_blank">CorruptComputer</a></h4>
+        <h4>Primary Email: <a href="mailto:nickolas@gupton.xyz" target="_blank" rel="noopener">nickolas@gupton.xyz</a></h4>
+        <h4>Secondary Email: <a href="mailto:nickolas.gupton@protonmail.com" target="_blank" rel="noopener">nickolas.gupton@protonmail.com</a></h4>
+        <h4>LinkedIn: <a href="https://www.linkedin.com/in/nickolasgupton/" target="_blank" rel="noopener">Nickolas Gupton</a></h4>
+        <h4>GitHub: <a href="https://github.com/CorruptComputer" target="_blank" rel="noopener">CorruptComputer</a></h4>
     </div>
     <div class="box">
         <h2>Personally</h2><hr />
         <h4>Discord: CorruptComputer#2956</h4>
-        <h4>Twitter: <a href="https://twitter.com/CorruptComputer" target="_blank">@CorruptComputer</a></h4>
-        <h4>Steam: <a href="https://steamcommunity.com/id/CorruptComputer" target="_blank">CorruptComputer</a></h4>
-        <h4>Twitch: <a href="https://www.twitch.tv/corruptcomputer" target="_blank">CorruptComputer</a></h4>
+        <h4>Twitter: <a href="https://twitter.com/CorruptComputer" target="_blank" rel="noopener">@CorruptComputer</a></h4>
+        <h4>Steam: <a href="https://steamcommunity.com/id/CorruptComputer" target="_blank" rel="noopener">CorruptComputer</a></h4>
+        <h4>Twitch: <a href="https://www.twitch.tv/corruptcomputer" target="_blank" rel="noopener">CorruptComputer</a></h4>
     </div>
 </div>
