Fix PWA app background color and name

--- a/games/voronoi/index.html
+++ b/games/voronoi/index.html
@@ -12,15 +12,15 @@
     <link rel="icon" type="image/png" sizes="194x194" href="https://nickolas.gupton.xyz/favicons/favicon-194x194.png">
     <link rel="icon" type="image/png" sizes="192x192" href="https://nickolas.gupton.xyz/favicons/android-chrome-192x192.png">
     <link rel="icon" type="image/png" sizes="16x16" href="https://nickolas.gupton.xyz/favicons/favicon-16x16.png">
-    <link rel="manifest" href="https://nickolas.gupton.xyz/favicons/site.webmanifest">
-    <link rel="mask-icon" href="https://nickolas.gupton.xyz/favicons/safari-pinned-tab.svg" color="#454d6a">
+    <link rel="manifest" href="./site.webmanifest">
+    <link rel="mask-icon" href="https://nickolas.gupton.xyz/favicons/safari-pinned-tab.svg" color="#164A77">
     <link rel="shortcut icon" href="https://nickolas.gupton.xyz/favicons/favicon.ico">
     <meta name="apple-mobile-web-app-title" content="Voronoi">
     <meta name="application-name" content="Voronoi">
-    <meta name="msapplication-TileColor" content="#454d6a">
+    <meta name="msapplication-TileColor" content="#164A77">
     <meta name="msapplication-TileImage" content="https://nickolas.gupton.xyz/favicons/mstile-144x144.png">
-    <meta name="msapplication-config" content="https://nickolas.gupton.xyz/favicons/browserconfig.xml">
-    <meta name="theme-color" content="#454d6a">
+    <meta name="msapplication-config" content="./browserconfig.xml">
+    <meta name="theme-color" content="#164A77">
     <script src="./script.js" defer></script>
     <!-- Clarity code for https://nickolas.gupton.xyz/ -->
     <script>
