Update index page with more up to date info

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 sitemap:
-  lastmod: 2021-03-08 21:00:00
+  lastmod: 2021-09-03 10:00:00
 ---
 
 <div class="row">
@@ -9,10 +9,10 @@ sitemap:
     <h2>Hello there!</h2><hr />
     <p>
         I started programming in High School, and have had a passion for it ever since. 
-        The first language I ever used was Java and it will always have a soft spot in my heart, however since then I have learned and grown to love many other languages such as C, C++, Python, and JavaScript. 
+        The first language I ever used was Java and it will always have a soft spot in my heart, however since then I have learned and grown to love many other languages such as C#, C++, Python, and JavaScript. 
         The best thing to me about being a Software Developer is the constant need to learn and hone your skills with how quickly new technologies and best practices are released.
         <br />
-        <br /> Some qualities about myself that I think are important:
+        <br /> Some qualities for developing software that I think are important:
         <br /> Write readable code: if no one can read the code and edit it that does nothing but hurt everyone in the long run.
         <br /> Documentation is just as important as code: if you write some awesome piece of software and no one knows how to use it, then its not a useful one.
         <br /> Always improve and learn: this field moves so quickly compared to others, if you are not constantly learning you'll end up getting left behind.
@@ -50,22 +50,20 @@ sitemap:
             <ul class="skills">
                 <li>SQL</li>
                 <li>3+ years</li> <!-- 2018-> -->
-                <li>PHP</li>
-                <li>2 years</li> <!-- 2019->2020 -->
                 <li>C#</li>
-                <li>1+ year</li> <!-- 2020-> -->
+                <li>2+ years</li> <!-- 2020-> -->
                 <li>.NET Framework</li>
-                <li>1+ year</li> <!-- 2020-> -->
+                <li>2+ years</li> <!-- 2020-> -->
                 <li>.NET Core</li>
-                <li>1+ year</li> <!-- 2020-> -->
+                <li>2+ years</li> <!-- 2020-> -->
                 <li>ASP.NET</li>
-                <li>1+ year</li> <!-- 2020-> -->
+                <li>2+ years</li> <!-- 2020-> -->
                 <li>Angular</li>
-                <li>1+ year</li> <!-- 2020-> -->
-                <li>ReactJS</li>
-                <li>1+ year</li> <!-- 2020-> -->
-                <li>MongoDB</li>
-                <li>1+ year</li> <!-- 2020-> -->
+                <li>2+ years</li> <!-- 2020-> -->
+                <li>Autofac DI</li>
+                <li>1+ year</li> <!-- 2021-> -->
+                <li>SpecFlow Automation</li>
+                <li>1+ year</li> <!-- 2021-> -->
             </ul>
         </div>
     </div>
@@ -104,9 +102,9 @@ sitemap:
             <h4><a href="https://www.capgemini.com/" target="_blank" rel="noopener">Associate Consultant: Software Engineering - Capgemini</a></h4>
             <p>February 2020 - Present</p>
             <p>
-                I am a software engineer working at Capgemini in their Financial Services division.
+                I am a Software Engineer working at Capgemini in their Financial Services division.
             </p>
-            <p>Used: Angular, Git, JavaScript, TypeScript, ReactJS, NodeJS, MongoDB, Java, C#, .NET Framework, .NET Core, ASP.NET, SQL</p>
+            <p>Used: Amazon Web Services, Angular, C#, Git, JavaScript, .NET Core, .NET Framework, Node.js, TypeScript</p>
         </div>
     </div>
     <div class="box">
@@ -125,9 +123,10 @@ sitemap:
     <div class="box">
         <h2>In Development</h2><hr />
         <div>
-            <h4>Nothing currently...</h4>
+            <h4>SecureDoc</h4>
             <p>
-                This will be updated as I start new projects!
+                More info coming soon...
+                <br />Using: Amazon Web Services, AWS Aurora DB, C#, Cryptography, Razor Pages
             </p>
         </div>
     </div>
@@ -153,14 +152,14 @@ sitemap:
             <h4><a href="https://github.com/CorruptComputer/Officer-Beepsky" target="_blank" rel="noopener">Officer-Beepsky</a>:</h4>
             <p>
                 Officer-Beepsky is an open source Discord bot. 
-                I made it for some friends and me to use in order to play music and manage our server. 
-                It is built with Discord4J as its main API to use to connect to Discord.
+                I made it for some friends and myself to use in order to play music and manage our server. 
+                It was built with Discord4J as its main API to use to connect to Discord.
                 <br />Used: Bash, Git, Gradle, Java, PowerShell
             </p>
             <h4><a href="https://github.com/CorruptComputer/ASU-Team-Juice-Compiler" target="_blank" rel="noopener">Team Juice Compiler</a>:</h4>
             <p>
-                This is the compiler that was was written by my group (Team Juice) in my senior level Compilers class.
-                This was a collaborative effort by <a href="https://github.com/texaszn" target="_blank" rel="noopener">Zachary N.</a> and myself, 
+                This was the compiler that was was written by my group (Team Juice) in my senior level Compilers class.
+                It was a collaborative effort by <a href="https://github.com/texaszn" target="_blank" rel="noopener">Zachary N.</a> and myself, 
                 it takes Pascallite code and generates RAMM Assembly code as the result. This was written in three stages over the course of 3 months, 
                 however only our final code result is available in the repository (along with some easter eggs in the code). 
                 I plan on rewriting this in other languages as I learn them.
@@ -181,9 +180,9 @@ sitemap:
     </div>
     <div class="box">
         <h2>Personally</h2><hr />
-        <h4>Discord: CorruptComputer#2956</h4>
+        <h4>Discord: CorruptComputer#0001</h4>
         <h4>Twitter: <a href="https://twitter.com/CorruptComputer" target="_blank" rel="noopener">@CorruptComputer</a></h4>
-        <h4>Steam: <a href="https://steamcommunity.com/id/CorruptComputer" target="_blank" rel="noopener">CorruptComputer</a></h4>
-        <h4>Twitch: <a href="https://www.twitch.tv/corruptcomputer" target="_blank" rel="noopener">CorruptComputer</a></h4>
+        <!--h4>Steam: <a href="https://steamcommunity.com/id/CorruptComputer" target="_blank" rel="noopener">CorruptComputer</a></h4-->
+        <!--h4>Twitch: <a href="https://www.twitch.tv/corruptcomputer" target="_blank" rel="noopener">CorruptComputer</a></h4-->
     </div>
 </div>
