Clean up couple of code smells reported by SonarCloud
Also remove FontAwesome from README since it is no longer used

--- a/index.html
+++ b/index.html
@@ -182,7 +182,6 @@ sitemap:
         <h2>Personally</h2><hr />
         <h4>Discord: CorruptComputer#0001</h4>
         <h4>Twitter: <a href="https://twitter.com/CorruptComputer" target="_blank" rel="noopener">@CorruptComputer</a></h4>
-        <!--h4>Steam: <a href="https://steamcommunity.com/id/CorruptComputer" target="_blank" rel="noopener">CorruptComputer</a></h4-->
-        <!--h4>Twitch: <a href="https://www.twitch.tv/corruptcomputer" target="_blank" rel="noopener">CorruptComputer</a></h4-->
+        <h4>Steam: <a href="https://steamcommunity.com/id/CorruptComputer" target="_blank" rel="noopener">CorruptComputer</a></h4>
     </div>
 </div>
