--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 sitemap:
-  lastmod: 2022-04-08 12:00:00
+  lastmod: 2022-04-25 12:00:00
 ---
 
 <div class="row">
@@ -133,11 +133,11 @@ sitemap:
     <div class="box">
         <h2>Maintaining</h2><hr />
         <div>
-            <h4><a href="https://github.com/CorruptComputer/CorruptComputer.GitHub.io" target="_blank" rel="noopener">My Website</a>:</h4>
+            <h4><a href="https://github.com/CorruptComputer/home" target="_blank" rel="noopener">My Website</a>:</h4>
             <p>
                 The site you're currently looking at. 
                 I am not a designer, but I hope it still looks alright!
-                <br />Used: CSS, Git, HTML, JavaScript, Jekyll, Ruby
+                <br />Used: Cloudflare, CSS, Git, HTML, JavaScript, Jekyll, Ruby
             </p>
             <h4><a href="https://github.com/CorruptComputer/ProtonDB-Tags" target="_blank" rel="noopener">ProtonDB Tags</a>:</h4>
             <p>
