Relative paths for site resources

--- a/404.html
+++ b/404.html
@@ -13,11 +13,11 @@ sitemap:
             Anyways, heres a picture of a Sloth with an Eagles head:
         </p>
         <div style="display: flex; justify-content: space-around;">
-            <img src="{{ site.url }}/images/404.png" alt="Sloth with an Eagles head" style="width: 50%;"/>
+            <img src="/images/404.png" alt="Sloth with an Eagles head" style="width: 50%;"/>
         </div>
         <br />
         <div style="display: flex; justify-content: space-around;">
-            <a href="{{ site.url }}/"><button class="blogBtn">Return home</button></a>
+            <a href="/"><button class="blogBtn">Return home</button></a>
         </div>
         
     </div>
