--- a/games/not-nim/index.html
+++ b/games/not-nim/index.html
@@ -19,7 +19,7 @@
    <div id="right">
       <fieldset>
          <legend>Settings</legend>
-         <p>!Nim is a mathematical game of strategy, which is based on the ancient Chineese board game <a href="https://en.wikipedia.org/wiki/Nim" target="_blank">Nim</a>. In !Nim players take turns removing coins from heaps, and the player who takes the last coin on the board wins!</p>
+         <p>!Nim is a mathematical game of strategy, which is based on the ancient Chineese board game <a href="https://en.wikipedia.org/wiki/Nim" target="_blank" rel="noopener">Nim</a>. In !Nim players take turns removing coins from heaps, and the player who takes the last coin on the board wins!</p>
          <p>When choosing how many coins to take from a row, keep in mind that all coins to the right of the selected one will also be taken.</p>
          
          <p>Number of rows:
