Fix games not being added to sitemap

--- a/games/not-nim/index.html
+++ b/games/not-nim/index.html
@@ -1,8 +1,14 @@
+---
+layout: none
+sitemap:
+  lastmod: 2022-04-25 12:00:00
+---
 <!DOCTYPE html>
 <html lang="en-US"><head>
    <meta charset="UTF-8" />
+   <meta name="description" content="!Nim is a mathematical game of strategy, which is based on the ancient Chineese board game Nim.">
    <meta name="viewport" content="width=device-width, initial-scale=1">
-   <title>!Nim</title>
+   <title>!Nim by Nickolas Gupton</title>
 
    <!-- Import a CSS stylesheet to style the page. -->
    <link href="style.css" rel="stylesheet" />
