--- a/games/not-nim/index.html
+++ b/games/not-nim/index.html
@@ -5,9 +5,12 @@ sitemap:
 ---
 <!DOCTYPE html>
 <html lang="en-US"><head>
-   <meta charset="UTF-8" />
+   <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   
    <meta name="description" content="!Nim is a mathematical game of strategy, which is based on the ancient Chineese board game Nim.">
-   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+   <link rel="canonical" href="{{site.url}}{{ page.url }}" />
    <title>!Nim by Nickolas Gupton</title>
 
    <!-- Import a CSS stylesheet to style the page. -->
