Fix 2 warnings given by Bing Webmasters Console

--- a/games/not-nim/index.html
+++ b/games/not-nim/index.html
@@ -17,6 +17,7 @@ sitemap:
    <link href="style.css" rel="stylesheet" />
 </head>
 <body>
+   <h1 style="display:none;">!Nim by Nickolas Gupton</h1>
    <div id="left">
       <fieldset>
          <legend>Game</legend>
