--- a/games/voronoi/index.html
+++ b/games/voronoi/index.html
@@ -9,7 +9,7 @@ sitemap:
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
-        <meta name="description" content="In mathematics, a Voronoi diagram is a partition of a plane into regions close to each of a given set of objects. In the simplest case, these objects are just finitely many points in the plane (called seeds, sites, or generators). For each seed there is a corresponding region, called a Voronoi cell, consisting of all points of the plane closer to that seed than to any other. The Voronoi diagram of a set of points is dual to its Delaunay triangulation.">
+        <meta name="description" content="In mathematics, a Voronoi diagram is a partition of a plane into regions close to each of a given set of objects.">
         
         <link rel="canonical" href="{{site.url}}{{ page.url }}" />
         <title>Voronoi by Nickolas Gupton</title>
