--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ sitemap:
         <h2>Personally</h2><hr />
         <h4>Discord: CorruptComputer#0001</h4>
         <h4>Twitter: <a href="https://twitter.com/CorruptComputer" target="_blank" rel="noopener">@CorruptComputer</a></h4>
-        <h4>Mastodon: <a rel="me" href="https://mastodon.social/@CorruptComputer" target="_blank" rel="noopener">@CorruptComputer@mastodon.social</a></h4>
+        <h4>Mastodon: <a href="https://mastodon.social/@CorruptComputer" target="_blank" rel="me">@CorruptComputer@mastodon.social</a></h4>
         <h4>Steam: <a href="https://steamcommunity.com/id/CorruptComputer" target="_blank" rel="noopener">CorruptComputer</a></h4>
     </div>
 </div>
