Swap some of the sites images from .png to .webp to test loading speed difference

--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@ layout: default
             Anyways, heres a picture of a Sloth with an Eagles head:
         </p>
         <div style="display: flex; justify-content: space-around;">
-            <img src="/images/404.png" alt="Sloth with an Eagles head" style="width: 50%;"/>
+            <img src="/images/404.webp" alt="Sloth with an Eagles head" style="width: 50%;"/>
         </div>
         <br />
         <div style="display: flex; justify-content: space-around;">
