Update index, remove unused image, and fix naming of workflow file

--- a/index.html
+++ b/index.html
@@ -123,10 +123,9 @@ sitemap:
     <div class="box">
         <h2>In Development</h2><hr />
         <div>
-            <h4>SecureDoc</h4>
+            <h4>Nothing new at the moment</h4>
             <p>
-                More info coming soon...
-                <br />Using: Amazon Web Services, AWS Aurora DB, C#, Cryptography, Razor Pages
+                Check back later and I might have something new here.
             </p>
         </div>
     </div>
@@ -183,6 +182,5 @@ sitemap:
         <h4>Discord: CorruptComputer#0001</h4>
         <h4>Twitter: <a href="https://twitter.com/CorruptComputer" target="_blank" rel="noopener">@CorruptComputer</a></h4>
         <h4>Mastodon: <a href="https://mastodon.social/@CorruptComputer" target="_blank" rel="me">@CorruptComputer@mastodon.social</a></h4>
-        <h4>Steam: <a href="https://steamcommunity.com/id/CorruptComputer" target="_blank" rel="noopener">CorruptComputer</a></h4>
     </div>
 </div>
