Fix typo in mastodon link

--- a/index.html
+++ b/index.html
@@ -181,6 +181,6 @@ sitemap:
         <h2>Personally</h2><hr />
         <h4>Discord: CorruptComputer#0001</h4>
         <h4>Twitter: <a href="https://twitter.com/CorruptComputer" target="_blank" rel="noopener">@CorruptComputer</a></h4>
-        <h4>Mastodon: <a href="hhttps://fosstodon.org/@CorruptComputer" target="_blank" rel="me">@CorruptComputer@fosstodon.org</a></h4>
+        <h4>Mastodon: <a href="https://fosstodon.org/@CorruptComputer" target="_blank" rel="me">@CorruptComputer@fosstodon.org</a></h4>
     </div>
 </div>
