Update skills and employment sections

--- a/index.html
+++ b/index.html
@@ -23,75 +23,78 @@ sitemap:
 </div>
 
 <h2>What I do:</h2>
-<div class="row">
-    <div class="box">
-        <h2>Programming:</h2><hr />
-        <div class="row">
-            <ul class="skills">
-                <li>Git</li>
-                <li>7+ years</li> <!-- 2014-> -->
-                <li>Java</li>
-                <li>7+ years</li> <!-- 2014-> -->
-                <li>HTML</li>
-                <li>7+ years</li> <!-- 2014-> -->
-                <li>CSS</li>
-                <li>7+ years</li> <!-- 2014-> -->
-                <li>JavaScript/TypeScript</li>
-                <li>7+ years</li> <!-- 2014-> -->
-                <li>Jekyll</li>
-                <li>7+ years</li> <!-- 2014-> -->
-                <li>Linux</li>
-                <li>7+ years</li> <!-- 2014-> -->
-                <li>Python</li>
-                <li>5+ years</li> <!-- 2016-> -->
-                <li>C++</li>
-                <li>4 years</li> <!-- 2016->2020 -->
-            </ul>
-            <ul class="skills">
-                <li>SQL</li>
-                <li>3+ years</li> <!-- 2018-> -->
-                <li>C#</li>
-                <li>2+ years</li> <!-- 2020-> -->
-                <li>.NET Framework</li>
-                <li>2+ years</li> <!-- 2020-> -->
-                <li>.NET Core</li>
-                <li>2+ years</li> <!-- 2020-> -->
-                <li>ASP.NET</li>
-                <li>2+ years</li> <!-- 2020-> -->
-                <li>Angular</li>
-                <li>2+ years</li> <!-- 2020-> -->
-                <li>Autofac DI</li>
-                <li>1+ year</li> <!-- 2021-> -->
-                <li>SpecFlow Automation</li>
-                <li>1+ year</li> <!-- 2021-> -->
-            </ul>
+<div>
+    <div class="row">
+        <div class="box">
+            <h2>Programming:</h2><hr />
+            <div class="row">
+                <ul class="skills">
+                    <li>Git</li>
+                    <li>9+ years</li> <!-- 2014-> -->
+                    <li>HTML</li>
+                    <li>9+ years</li> <!-- 2014-> -->
+                    <li>CSS</li>
+                    <li>9+ years</li> <!-- 2014-> -->
+                    <li>JavaScript/TypeScript</li>
+                    <li>9+ years</li> <!-- 2014-> -->
+                    <li>Jekyll</li>
+                    <li>9+ years</li> <!-- 2014-> -->
+                    <li>Linux</li>
+                    <li>9+ years</li> <!-- 2014-> -->
+                    <li>Python</li>
+                    <li>7+ years</li> <!-- 2016-> -->
+                    <li>Java</li>
+                    <li>7 years</li> <!-- 2014->2021 -->
+                    <li>C++</li>
+                    <li>4 years</li> <!-- 2016->2020 -->
+                </ul>
+                <ul class="skills">
+                    <li>SQL</li>
+                    <li>3+ years</li> <!-- 2020-> -->
+                    <li>C#</li>
+                    <li>3+ years</li> <!-- 2020-> -->
+                    <li>.NET Framework</li>
+                    <li>3+ years</li> <!-- 2020-> -->
+                    <li>.NET Core</li>
+                    <li>3+ years</li> <!-- 2020-> -->
+                    <li>ASP.NET</li>
+                    <li>3+ years</li> <!-- 2020-> -->
+                    <li>Autofac DI</li>
+                    <li>2+ years</li> <!-- 2021-> -->
+                    <li>Angular</li>
+                    <li>2 years</li> <!-- 2020->2022 -->
+                    <li>SpecFlow Automation</li>
+                    <li>1 year</li> <!-- 2021->2022 -->
+                </ul>
+            </div>
+        </div>
+        <div class="box">
+            <h2>Tech:</h2><hr />
+            <div class="row">
+                <ul class="skills">
+                    <li>Linux Server Management</li>
+                    <li>7+ years</li> <!-- 2016-> -->
+                    <li>Bash</li>
+                    <li>7+ years</li> <!-- 2016-> -->
+                    <li>CI/CD (GitHub Actions)</li>
+                    <li>5+ years</li> <!-- 2018-> -->
+                    <li>Network Attached Storage</li>
+                    <li>5+ years</li> <!-- 2018-> -->
+                    <li>Virtualization</li>
+                    <li>5+ years</li> <!-- 2018-> -->
+                    <li>Microsoft SQL Server</li>
+                    <li>3+ years</li> <!-- 2020-> -->
+                    <li>CI/CD (Azure DevOps)</li>
+                    <li>3+ years</li> <!-- 2020-> -->
+                    <li>Terraform</li>
+                    <li>2 years</li> <!-- 2021->2023 -->
+                    <li>Windows Server Management</li>
+                    <li>2 years</li> <!-- 2018->2020 -->
+                </ul>
+            </div>
         </div>
     </div>
-    <div class="box">
-        <h2>Tech:</h2><hr />
-        <div class="row">
-            <ul class="skills">
-                <li>Linux Server Management</li>
-                <li>5+ years</li> <!-- 2016-> -->
-                <li>Bash</li>
-                <li>5+ years</li> <!-- 2016-> -->
-                <li>Active Directory</li>
-                <li>2 years</li> <!-- 2018->2020 -->
-                <li>Group Policy Management</li>
-                <li>2 years</li> <!-- 2018->2020 -->
-                <li>Powershell</li>
-                <li>2 years</li> <!-- 2018->2020 -->
-                <li>Windows Server Management</li>
-                <li>2 years</li> <!-- 2018->2020 -->
-                <li>VMware vCenter</li>
-                <li>2 years</li> <!-- 2018->2020 -->
-                <li>SolarWinds</li>
-                <li>2 years</li> <!-- 2018->2020 -->
-                <li>SCCM</li>
-                <li>2 years</li> <!-- 2018->2020 -->
-            </ul>
-        </div>
-    </div>
+    <p class="footnote">+ means I am currently working with this tech, so the years may be out of date. Last updated in 2023.</p>
 </div>
 
 <h2>Where I work:</h2>
@@ -99,26 +102,28 @@ sitemap:
     <div class="box">
         <h2>Currently</h2><hr />
         <div>
-            <h4><a href="https://www.capgemini.com/" target="_blank" rel="noopener">Associate Consultant: Software Engineering - Capgemini</a></h4>
-            <p>February 2020 - Present</p>
+            <h4><a href="https://www.irthsolutions.com/" target="_blank" rel="noopener">Software Engineer II - Irth Solutions</a></h4>
+            <p>December 2022 - Present</p>
             <p>
-                I am a Software Engineer working at Capgemini in their Financial Services division.
+                I am on a team that develops ticketing and work management systems for critical infrastructure.
             </p>
-            <p>Used: Amazon Web Services, Angular, C#, Git, JavaScript, .NET Core, .NET Framework, Node.js, TypeScript</p>
+            <p>Used: ASP.NET, C#, Git, JavaScript, .NET Core, .NET Framework, Microsoft Azure</p>
         </div>
     </div>
     <div class="box">
         <h2>Previously</h2><hr />
         <div>
-            <h4><a href="https://www.angelo.edu/services/technology/" target="_blank" rel="noopener">Server Technician - Angelo State University</a></h4>
-            <p>April 2018 - December 2019</p>
-            <p>I was part of a team which managed their data center and virtual servers, along with Active Directory and Group Policy for the campus.</p>
-            <p>Used: Active Directory, Bash, Group Policy Management, Linux Server Management, PowerShell, SQL, SCCM, SolarWinds, VMware vCenter, Windows Server Management</p>
+            <h4><a href="https://www.capgemini.com/" target="_blank" rel="noopener">Associate Consultant: Software Engineering - Capgemini</a></h4>
+            <p>February 2020 - December 2022</p>
+            <p>
+                I was a Software Engineer working at Capgemini in their Financial Services division.
+            </p>
+            <p>Used: Amazon Web Services, Angular, ASP.NET, C#, CI/CD, Git, JavaScript, .NET Core, .NET Framework, Node.js, Terraform, TypeScript</p>
         </div>
     </div>
 </div>
 
-<h2>Projects I've worked on:</h2>
+<h2>My personal projects:</h2>
 <div class="row">
     <div class="box">
         <h2>In Development</h2><hr />
