--- a/index.html
+++ b/index.html
@@ -180,12 +180,11 @@ sitemap:
         <h4>Primary Email: <a href="mailto:nickolas@gupton.xyz" target="_blank" rel="noopener">nickolas@gupton.xyz</a></h4>
         <h4>Secondary Email: <a href="mailto:nickolas.gupton@protonmail.com" target="_blank" rel="noopener">nickolas.gupton@protonmail.com</a></h4>
         <h4>LinkedIn: <a href="https://www.linkedin.com/in/nickolasgupton/" target="_blank" rel="noopener">Nickolas Gupton</a></h4>
-        <h4>GitHub: <a href="https://github.com/CorruptComputer" target="_blank" rel="noopener">CorruptComputer</a></h4>
     </div>
     <div class="box">
         <h2>Personally</h2><hr />
-        <h4>Discord: CorruptComputer#0001</h4>
-        <h4>Twitter: <a href="https://twitter.com/CorruptComputer" target="_blank" rel="noopener">@CorruptComputer</a></h4>
+        <h4>Discord: @corruptcomputer</h4>
+        <h4>GitHub: <a href="https://github.com/CorruptComputer" target="_blank" rel="noopener">CorruptComputer</a></h4>
         <h4>Mastodon: <a href="https://fosstodon.org/@CorruptComputer" target="_blank" rel="me">@CorruptComputer@fosstodon.org</a></h4>
     </div>
 </div>
