--- a/Home/wwwroot/index.html
+++ b/Home/wwwroot/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name='description' content="My home on the Internet. Discussing programming, Linux, and other tech topics.">
         
-        <title></title>
+        <title>Meep Merp</title>
         <base href="/" />
         <link rel="stylesheet" href="css/app.css" />
         <link href="Home.styles.css" rel="stylesheet" />
