--- a/Home/wwwroot/index.html
+++ b/Home/wwwroot/index.html
@@ -36,6 +36,6 @@
             <span class="dismiss">🗙</span>
         </div>
         <script src="_framework/blazor.webassembly.js"></script>
-        <script>navigator.serviceWorker.register('service-worker.js');</script>
+        <script>navigator.serviceWorker.register('service-worker.js', { updateViaCache: 'none' });</script>
     </body>
 </html>
