--- a/Home/wwwroot/index.html
+++ b/Home/wwwroot/index.html
@@ -37,5 +37,6 @@
         </div>
         <script src="_framework/blazor.webassembly.js"></script>
         <script>navigator.serviceWorker.register('service-worker.js', { updateViaCache: 'none' });</script>
+        <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "babad771f26544469aedb30627d230b7"}'></script>
     </body>
 </html>
